js262/test/language/module-code/parse-err-decl-pos-import-block-stmt-list.js


/*---
description: Statement cannot contain an `import` declaration
esid: sec-modules
negative:
  phase: parse
  type: SyntaxError
flags: [module]
---*/

$DONOTEVALUATE();

{ void 0; import v from './decl-pos-import-block-stmt-list.js'; }
